v0.6.3 - ?

  - support to load (some) .tmx maps with hexagonal tiles
  - support collisions between CircleShape and AARectShape in collision_model, 
    #220, thanks Daniel Gillet
  - support to read .tmx (Tiled Editor) object layers and objects, #215
  - deprecated do_not_scale and do_not_scale_window, use autoscale, #214

  - fixed debug view of tmx object layers
  - fixed access cell properties for HexMap, #237, thanks Ezequiel Pozzo
  - workaround to some cases of 'unable to share contexts' on Intel gpu, #235
  - fixed tmx color problem in py2, thanks Daniel Gillet
  - fixed InterpreterLayer crash in py3, thanks Gereon Kaiping 
  - PEP8 over the library, thanks Humberto Rocha
  - PEP8 on some support files, thanks Igor Hatarist
  - fixed z-order in BatchNode, #213, thanks Nitneroc and MCopperhead
  - fixed passing a matrix in a uniform to shaders ( 4a7bfb5ca8 )
  - fixed Rect.clippedBy ( 0ffd5a37 ) 
  - fixed RandomDelay * n ( 56a5229 )
  - fixed <instant action> * n ( 9b1d950 )

v0.6.0 - March 24, 2014
  - removed tiles.ScrollingManager / tiles.ScrollableLayer, they were deprecated
    compatibility shims of same classes in cocos.layer
  - added support for gzip compression in .tmx maps, thanks fred@reichbier.de
    for initial patch, #185
  - fix Sprite.get_rect() forgetting about .scale_x and .scale_y 
  - from r1282 cocos needs python 2.6 or 2.7, and the 'six' package
  ===========================================================================
  - r1281 is the last revision completely compatible with python 2.4 and 2.5
  - EntryMenuItem, callback called before updating the view
  - documentation subsystem changed to sphinx, #206, ended r1278
  - fix particles scaling, #204, thanks hello3171@gmail.com for bugreport
  - module shaders slightly upgraded, added test_shader_examples.py
  - fix mouse hit in HexMap, #203
  - fix some parts of a HexMap not rendering - #201 , #202
  - tilemaps, added persistence of cell color / opacity from / to .xml files - #200